# Teste

./: .gitignore  .package-lock.json  README.md  ROADMAP.md  eslint.config.mts  index.html  package-lock.json  package.json  roadmap.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: deploy.yml
docs/weydra-renderer/: README.md
meu-jogo/: eslint.config.mjs  index.html  index.js  package-lock.json  package.json
meu-jogo/entidades/: cachorro.js  jogador.js
meu-jogo/hud/: minimapa.js
meu-jogo/player/: player.js
meu-jogo/src/: main.ts  types.ts  vite-env.d.ts
meu-jogo/terreno/: terreno.js
meu-jogo/world/: fundo.js  mundo.js  planeta.js
public/: mockup-hud.html  mockup-retro.html
scripts/: check-all-platforms.sh  check-platform-guards.sh
src/: main.ts  types.ts  weydra-loader.ts
src/audio/: mixer.ts  musica-ambiente.ts  som.ts
src/core/: benchmark.ts  config.ts  graphics-preset.ts  player.ts  profiling-instr.ts  ui-mode.ts
src/shaders/: fog.wgsl  planeta-weydra.wgsl  planeta.frag  planeta.vert  planeta.wgsl  starfield.frag  starfield.wgsl
src/ui/: _modal-a11y.ts  animations.css.ts  bottom-sheet.css.ts  build-panel.ts  chat-log.ts  colonizer-panel.ts  colony-modal.ts  confirm-dialog.ts  confirmar-acao.ts  credits-bar.ts  debug-menu.ts  debug.ts  empire-badge.ts  empire-modal.ts  fila-dnd.ts  hud-layout.ts  hud-refresh.ts  loading-screen.ts  lore-keywords.ts  lore-modal.ts  main-menu.ts  minimap.ts  minimapa.ts  mobile-build.ts  mobile-colonizer-panel.ts  mobile-menu-btn.ts  mobile-planet-drawer.ts  mobile-ship-panel.ts  mobile.css.ts  new-world-modal.ts  notificacao.ts  painel.ts  pause-menu.ts  planet-details-modal.ts  planet-drawer.ts  planet-modal.ts  planet-panel.ts  renderer-info-modal.ts  resource-bar.ts  save-modal.ts  (+8 more)
src/world/: battle-log.ts  combate-resolucao.ts  combate.ts  constantes.ts  construcao.ts  determinism-scene.ts  distance-matrix.ts  engine-trails.ts  eventos.ts  (+28 more)
weydra-renderer/: Cargo.toml  rust-toolchain.toml
weydra-renderer/adapters/android/: Cargo.toml
weydra-renderer/adapters/android/src/: lib.rs
weydra-renderer/adapters/wasm/: Cargo.toml
weydra-renderer/adapters/wasm/src/: lib.rs
weydra-renderer/core/: Cargo.toml
weydra-renderer/core/shaders/: sprite_batch_instanced.wgsl
weydra-renderer/core/src/: bind_groups.rs  camera.rs  device.rs  error.rs  frame.rs  lib.rs  mesh.rs  render_target.rs  shader.rs  surface.rs  texture.rs  uniform_pool.rs
weydra-renderer/core/src/pools/: mod.rs  planet.rs
weydra-renderer/examples/hello-clear/src/: main.rs
weydra-renderer/tests/determinism/: README.md  runner.mjs
weydra-renderer/ts-bridge/: index.ts  package-lock.json  package.json  types.ts
weydra-renderer/vite-plugin-wgsl/: index.ts  package-lock.json  package.json  tsconfig.build.json
(+112 files in other folders)
