[workspace]
resolver = "2"
members = [
    "core",
    "adapters/wasm",
    "adapters/native",
    "adapters/android",
    "examples/hello-clear",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["weydra"]
license = "MIT"

[workspace.dependencies]
wgpu = "29"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
pollster = "0.4"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
winit = "0.31.0-beta.2"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
