[workspace]
resolver = "2"
members = [
    "core",
    "adapters/wasm",
    "adapters/native",
    "adapters/android",
    "adapters/ios",
    "examples/hello-clear",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["weydra"]
license = "MIT"

[workspace.dependencies]
wgpu = "29"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.32", features = ["bytemuck"] }
pollster = "0.4"
log = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
console_error_panic_hook = "0.1"
winit = "0.31.0-beta.2"
env_logger = "0.11"

[profile.release]
opt-level = 3
# lto=thin + codegen-units=1 was the slowest possible combo (2-3× compile
# time). For wasm, `wasm-opt -Oz` (run by wasm-pack in release mode)
# recovers nearly all the size lto/1-unit would save, so we trade a ~3-8%
# size bump for a much faster cargo build.
lto = false
codegen-units = 16
strip = "debuginfo"
