[package]
name = "weydra-renderer-android"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
weydra-renderer = { path = "../../core" }
wgpu = { version = "29", default-features = false, features = ["vulkan", "gles"] }
winit = { workspace = true, features = ["android-native-activity"] }
log = { workspace = true }
android_logger = "0.15"
